[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "LeGen"
authors = [
    {name = "Matheus Bach"},
]
description = "LeGen is a Python script that normalizes video files using vidqa, transcribes subtitles from audio with Whisper, translates generated subtitles using Google Translator, saves subtitles in .srt files, inserts subtitles into .mp4 container and burns subtitles directly onto videos using FFmpeg "
readme = "README.md"
requires-python = ">=3.7"
keywords = ["subtitle", "whisper", "ffmpeg", "translator", "video"]
license = {text = "GPL 3"}
classifiers = [
    "Framework :: LeGen",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "deep_translator",
    "ffmpeg_progress_yield",
    "openai_whisper",
    "pysrt",
    "torch",
    "tqdm",
    "whisper",
    "vidqa",
    "whisperx"
]
py_modules = [
    "translate_utils",
    "file_utils",
    "whisper_utils",
    "whisperx_utils",
    "ffmpeg_utils"
]
dynamic = ["version"]


[project.scripts]
